--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" href="css/onsenui.css">
         <link rel="stylesheet" href="css/onsen-css-components.css">
-        <link rel="stylesheet" href="css/todos.css">
+        <link rel="stylesheet" href="node_modules/todos-view/css/todos.css">
 
         <title>Todos Together</title>
 
