--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="css/onsenui.css">
         <link rel="stylesheet" href="css/onsen-css-components.css">
         <link rel="stylesheet" href="node_modules/todos-view/css/todos.css">
+        <link rel="stylesheet" href="node_modules/todos-view/node_modules/react-onsenui-datepicker/css/style.css">
 
         <title>Todos Together</title>
 
