--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" href="node_modules/todos-view/node_modules/onsenui/css/onsenui.css">
+        <!--<link rel="stylesheet" href="node_modules/todos-view/node_modules/onsenui/css/onsen-css-components.css">-->
         <link rel="stylesheet" href="node_modules/todos-view/css/theme/onsen-css-components.css">
         <link rel="stylesheet" href="node_modules/todos-view/css/todos.css">
         <link rel="stylesheet" href="node_modules/todos-view/css/datepicker.css">
